fix button add position on mobile view

--- a/src/Containers/Budget/Budget.module.css
+++ b/src/Containers/Budget/Budget.module.css
@@ -26,7 +26,7 @@
   .container_col {
     flex: 1;
     overflow-y: scroll;
-    max-height: calc(100vh - 50px - 250px - 150px);
+    max-height: calc(100vh - 50px - 250px - 165px);
     /* /* max-height: 38vh; */
   }
   .graph {
