--- a/src/Containers/Settings/Settings.module.css
+++ b/src/Containers/Settings/Settings.module.css
@@ -13,7 +13,7 @@
   .container {
     overflow: hidden;
     overflow-y: scroll;
-    max-height: 580px;
+    max-height: calc(100vh - 100px);
   }
   .cell_title {
     font-size: 1.5rem;
